--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -9,10 +9,10 @@
         <br/>
         Overview guide: <a href="{{site.baseurl}}/docs/operators/latest/overview.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
         Quick Start guide: <a href="{{site.baseurl}}/docs/operators/latest/quickstart.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
-        Deploying Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/deploying.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
+        Deploying and Upgrading: <a href="{{site.baseurl}}/docs/operators/latest/deploying.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
         Using Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/using.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
         Example custom resources: <a href="{{site.github_url}}/strimzi-kafka-operator/tree/{{site.data.releases.operator[0].version}}/examples">{{site.data.releases.operator[0].version}} - latest stable release</a>
-      </p>
+      </p><br/>
       <p>
         <strong class="text-caps">Strimzi Kafka Bridge Documentation</strong>
         <br/>
@@ -29,8 +29,9 @@
         Strimzi Kafka operators Master<br>
         <a href="{{site.baseurl}}/docs/operators/master/overview.html">Overview guide</a> |
         <a href="{{site.baseurl}}/docs/operators/master/quickstart.html">Quick Start guide</a> |
-        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying Strimzi</a> |
-        <a href="{{site.baseurl}}/docs/operators/master/using.html">Using Strimzi</a>
+        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying and Upgrading</a> |<br/>
+        <a href="{{site.baseurl}}/docs/operators/master/using.html">Using Strimzi</a> | 
+        <a href="{{site.github_url}}/strimzi-kafka-operator/tree/master/examples">Example custom resources</a>
       </p>
       <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/master/">Master</a></p>
     </div>
