Add proper styles and generate tablefrom release data
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/downloads/supported-versions-band.html
+++ b/_includes/downloads/supported-versions-band.html
@@ -1,4 +1,4 @@
-<div class="component-slim download-release-band" style="padding-top: 0">
+<div class="component-slim supported-versions-band" style="padding-top: 0">
   <div class="grid-wrapper">
     <div class="width-12-12">
         <h3 style="margin-top: 0">Supported versions</h3>
@@ -8,52 +8,44 @@
       <table class="tg">
         <tr>
           <th>
-            <div class="version-name">
-              Operators
+            <div class="supported-component">
+              Operators<span class="release-date"></span>
             </div>
           </th>
           <th>
-            <div class="version-name">
-              Strimzi Kafka Bridge
+            <div class="supported-component">
+              Strimzi Kafka Bridge<span class="release-date"></span>
             </div>
           </th>
           <th>
-            <div class="version-name">
-              Strimzi OAuth
+            <div class="supported-component">
+              Strimzi OAuth<span class="release-date"></span>
             </div>
           </th>
           <th>
-            <div class="version-name">
-              Kafka versions
+            <div class="supported-component">
+              Kafka versions<span class="release-date"></span>
             </div>
           </th>
           <th>
-            <div class="version-name">
-              Kubernetes versions
+            <div class="supported-component">
+              Kubernetes versions<span class="release-date"></span>
             </div>
           </th>
         </tr>
+
+        {% for oRelease in site.data.releases.operator %}
+          {% if oRelease.kafkaVersions %}
         <tr>
-          <td class="description"><a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/0.21.0">0.21.0</a></td>
-          <td class="licence">0.19.0</td>
-          <td class="licence">0.7.0</td>
-          <td class="licence">2.7.0, 2.6.0</td>
-          <td class="licence">1.16+</td>
+          <td class="description"><a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/{{oRelease.version}}">{{oRelease.version}}</a></td>
+          <td class="version">{% if oRelease.bridgeVersion %}{{oRelease.bridgeVersion}}{% endif %}</td>
+          <td class="version">{% if oRelease.oAuthVersion %}{{oRelease.oAuthVersion}}{% else %}n/a{% endif %}</td>
+          <td class="version">{% if oRelease.kafkaVersions %}{{oRelease.kafkaVersions}}{% endif %}</td>
+          <td class="version">{% if oRelease.kubernetesVersions %}{{oRelease.kubernetesVersions}}{% endif %}</td>
         </tr>
-        <tr>
-          <td class="description"><a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/0.20.0">0.20.0</a></td>
-          <td class="licence">0.19.0</td>
-          <td class="licence">0.6.1</td>
-          <td class="licence">2.6.0, 2.5.1, 2.5.0</td>
-          <td class="licence">1.11+</td>
-        </tr>
-        <tr>
-          <td class="description"><a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/0.19.0">0.19.0</a></td>
-          <td class="licence">0.18.0</td>
-          <td class="licence">0.5.0</td>
-          <td class="licence">2.5.0, 2.4.1, 2.4.0</td>
-          <td class="licence">1.11+</td>
-        </tr>
+          {% endif %}
+        {% endfor %}
       </table>
     </div>
+  </div>
 </div>
