--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,7 @@ $baseurl: "{{ site.baseurl }}";
 @import "core/includes/highlights-alternating-images-band";
 @import "core/includes/highlights-three-columns-band";
 @import "core/includes/download-release-band";
+@import "core/includes/supported-versions-band";
 @import "core/includes/contact-form-band";
 
 @import "project-colors";
@@ -37,6 +38,7 @@ $baseurl: "{{ site.baseurl }}";
 @import "includes/community-contributions-band";
 @import "includes/strimzi_navigation";
 @import "includes/download-release-band";
+@import "includes/supported-versions-band";
 @import "includes/download-archives-band";
 @import "includes/presentation-cards-band";
 @import "includes/homepage-download-announcement-band";
