--- a/_includes/homepage/homepage-hero-band.html
+++ b/_includes/homepage/homepage-hero-band.html
@@ -14,7 +14,7 @@
         <h4>Secure by Default</h4>
         <p>
           <ul>
-            <li>Out-of-the Box Security</li>
+            <li>Built-in security</li>
             <li>TLS, SCRAM-SHA, and OAuth authentication</li>
             <li>Automated Certificate Management</li>
           </ul>
