Prepare build to rename master branch to main
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -23,7 +23,7 @@
       <p>
         <strong class="text-caps">Master Documentation</strong>
         <br/>
-        The master documentation corresponds to the Strimzi version which is currently being developed and is in the master branch in our GitHub repositories.
+        The master documentation corresponds to the Strimzi version which is currently being developed and is in the main branch in our GitHub repositories.
       </p>
       <p>
         Strimzi Kafka operators Master<br>
@@ -31,7 +31,7 @@
         <a href="{{site.baseurl}}/docs/operators/master/quickstart.html">Quick Start guide</a> |
         <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying and Upgrading</a> |<br/>
         <a href="{{site.baseurl}}/docs/operators/master/using.html">Using Strimzi</a> | 
-        <a href="{{site.github_url}}/strimzi-kafka-operator/tree/master/examples">Example custom resources</a>
+        <a href="{{site.github_url}}/strimzi-kafka-operator/tree/main/examples">Example custom resources</a>
       </p>
       <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/master/">Master</a></p>
     </div>
