Fixed inconsistent link color behaviour
Fix for the inconsistent link color behaviour.

Changes per component:
- Menu: icon links (GitHub, Twitter and YouTube) now also change color on hover event.
- Footer: icon links (GitHub, Twitter and YouTube) label also trigger child element <i> to change color on hover event.
- Project/global: moved the hover event after the visited event styling, so that hover event styling ranks higher. Also made link color !important, because this is used throughout the styling.

Signed-off-by: Arie Scheurwater <16334194+ariescheurwater@users.noreply.github.com>

--- a/_sass/includes/project-footer.scss
+++ b/_sass/includes/project-footer.scss
@@ -30,9 +30,11 @@
   p {
     margin-top: 0;
     margin-bottom: 0;
-
-    a:visited {
-      color: $link-dark-bg !important; 
+    a {
+      color: $link-dark-bg !important;
+      &:hover, &:hover i {
+        color: $link-hover-dark-bg !important;
+      }
     }
   }
 
