--- a/_sass/includes/strimzi_navigation.scss
+++ b/_sass/includes/strimzi_navigation.scss
@@ -74,7 +74,7 @@ div.nav-wrapper {
       display: block;
       padding: 15px;
 
-      &:hover {
+      &:hover, &:hover i {
         color: $orange !important;
       }
     }
