--- a/_sass/strimzi.scss
+++ b/_sass/strimzi.scss
@@ -96,11 +96,11 @@ a, a i {
   cursor: pointer;
   text-decoration: underline;
   color: $link !important;
-  &:hover, &:active, &:focus {
-    color: $link-hover;
-  }
   &:visited {
     color: $link-visited;
+  }
+  &:hover {
+    color: $link-hover !important;
   }
 }
 
@@ -273,11 +273,11 @@ blockquote::after {
 
   a, a i {
     color: $link-dark-bg !important;
-    &:hover, &:active, &:focus {
-      color: $link-hover-dark-bg !important;
-    }
     &:visited {
       color: $link-visited-dark-bg !important;
+    }
+    &:hover {
+      color: $link-hover-dark-bg !important;
     }
   }
 }
