Add link to full docs
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -3,23 +3,23 @@
     <div class="width-12-12">
       <h3>Documentation for Version {{site.data.releases.operator[0].version}} - latest stable release</h3>
     </div>
-    <div class="width-6-12 width-12-12-m">
+    <div class="width-6-12 width-12-12-m documentation-verion-band">
       <p>
         <strong class="text-caps">Strimzi Kafka Operators Documentation</strong>
         <br/>
-        Overview guide: <a href="{{site.baseurl}}/docs/operators/latest/overview.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
-        Quick Start guide: <a href="{{site.baseurl}}/docs/operators/latest/quickstart.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
-        Deploying and Upgrading: <a href="{{site.baseurl}}/docs/operators/latest/deploying.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
-        Using Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/using.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
+        Overview guide: <a href="{{site.baseurl}}/docs/operators/latest/overview.html">{{site.data.releases.operator[0].version}} - latest stable release</a> <a href="{{site.baseurl}}/docs/operators/latest/full/overview.html" target="_blank"><i class="fas fa-external-link-alt"></i> </a><br/>
+        Quick Start guide: <a href="{{site.baseurl}}/docs/operators/latest/quickstart.html">{{site.data.releases.operator[0].version}} - latest stable release</a> <a href="{{site.baseurl}}/docs/operators/latest/full/quickstart.html" target="_blank"><i class="fas fa-external-link-alt"> </i></a><br/>
+        Deploying and Upgrading: <a href="{{site.baseurl}}/docs/operators/latest/deploying.html">{{site.data.releases.operator[0].version}} - latest stable release</a> <a href="{{site.baseurl}}/docs/operators/latest/full/deploying.html" target="_blank"><i class="fas fa-external-link-alt"></i></a><br/>
+        Using Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/using.html">{{site.data.releases.operator[0].version}} - latest stable release</a> <a href="{{site.baseurl}}/docs/operators/latest/full/using.html" target="_blank"><i class="fas fa-external-link-alt"></i></a><br/>
         Example custom resources: <a href="{{site.github_url}}/strimzi-kafka-operator/tree/{{site.data.releases.operator[0].version}}/examples">{{site.data.releases.operator[0].version}} - latest stable release</a>
       </p><br/>
       <p>
         <strong class="text-caps">Strimzi Kafka Bridge Documentation</strong>
         <br/>
-        <a href="{{site.baseurl}}/docs/bridge/latest/">{{site.data.releases.bridge[0].version}} - latest stable release</a>
+        <a href="{{site.baseurl}}/docs/bridge/latest/">{{site.data.releases.bridge[0].version}} - latest stable release</a> <a href="{{site.baseurl}}/docs/bridge/latest/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a>
       </p>
     </div>
-    <div class="width-6-12 width-12-12-m">
+    <div class="width-6-12 width-12-12-m documentation-verion-band">
       <p>
         <strong class="text-caps">In Development Documentation</strong>
         <br/>
@@ -27,13 +27,13 @@
       </p>
       <p>
         Strimzi Kafka operators (In Development)<br>
-        <a href="{{site.baseurl}}/docs/operators/in-development/overview.html">Overview guide</a> |
-        <a href="{{site.baseurl}}/docs/operators/in-development/quickstart.html">Quick Start guide</a> |
-        <a href="{{site.baseurl}}/docs/operators/in-development/deploying.html">Deploying and Upgrading</a> |<br/>
-        <a href="{{site.baseurl}}/docs/operators/in-development/using.html">Using Strimzi</a> | 
+        <a href="{{site.baseurl}}/docs/operators/in-development/overview.html">Overview guide</a>  <a href="{{site.baseurl}}/docs/operators/in-development/full/overview.html" target="_blank"><i class="fas fa-external-link-alt"></i></a> |
+        <a href="{{site.baseurl}}/docs/operators/in-development/quickstart.html">Quick Start guide</a>  <a href="{{site.baseurl}}/docs/operators/in-development/full/quickstart.html" target="_blank"><i class="fas fa-external-link-alt"></i></a> |
+        <a href="{{site.baseurl}}/docs/operators/in-development/deploying.html">Deploying and Upgrading</a>  <a href="{{site.baseurl}}/docs/operators/in-development/full/deploying.html" target="_blank"><i class="fas fa-external-link-alt"></i></a> |<br/>
+        <a href="{{site.baseurl}}/docs/operators/in-development/using.html">Using Strimzi</a>  <a href="{{site.baseurl}}/docs/operators/in-development/full/using.html" target="_blank"><i class="fas fa-external-link-alt"></i></a> | 
         <a href="{{site.github_url}}/strimzi-kafka-operator/tree/main/examples">Example custom resources</a>
       </p>
-      <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/in-development/">In Development</a></p>
+      <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/in-development/">In Development</a> <a href="{{site.baseurl}}/docs/bridge/in-development/full/bridge.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></p>
     </div>
   </div>
 </div>
