--- a/_sass/core/includes/secondary-page-title-band.scss
+++ b/_sass/core/includes/secondary-page-title-band.scss
@@ -1,3 +1,8 @@
 .secondary-page-title-band {
-
+  .documentation-verion-band {
+    i {
+      color: $white !important;
+      text-decoration: none;
+    }
+  }
 }
