Add titles to the links
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/documentation/documentation-archive-band.html
+++ b/_includes/documentation/documentation-archive-band.html
@@ -13,18 +13,18 @@
         {% if oRelease.directory_layout == "layout2" %}
           <h5>{{oRelease.version}}</h5>
           <ul>
-            {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/overview.html">Overview guide</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/overview.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/quickstart.html">Quick Start guide</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/quickstart.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/deploying.html">Deploying and Upgrading</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/deploying.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/using.html">Using Strimzi</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/using.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/overview.html">Overview guide</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/overview.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/quickstart.html">Quick Start guide</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/quickstart.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/deploying.html">Deploying and Upgrading</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/deploying.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/using.html">Using Strimzi</a> <a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/full/using.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
           </ul>
         {% elsif oRelease.directory_layout == "layout1" %}
           <h5>{{oRelease.version}}</h5>
           <ul>
-            {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{oRelease.version}}">Overview guide</a> <a href="{{site.baseurl}}/docs/overview/{{oRelease.version}}/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/quickstart/{{oRelease.version}}">Quick Start guide</a> <a href="{{site.baseurl}}/docs/quickstart/{{oRelease.version}}/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/deploying/{{oRelease.version}}">Deploying Strimzi</a> <a href="{{site.baseurl}}/docs/deploying/{{oRelease.version}}/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
-            {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/{{oRelease.version}}">Using Strimzi</a> <a href="{{site.baseurl}}/docs/{{oRelease.version}}/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{oRelease.version}}">Overview guide</a> <a href="{{site.baseurl}}/docs/overview/{{oRelease.version}}/full.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/quickstart/{{oRelease.version}}">Quick Start guide</a> <a href="{{site.baseurl}}/docs/quickstart/{{oRelease.version}}/full.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/deploying/{{oRelease.version}}">Deploying Strimzi</a> <a href="{{site.baseurl}}/docs/deploying/{{oRelease.version}}/full.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
+            {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/{{oRelease.version}}">Using Strimzi</a> <a href="{{site.baseurl}}/docs/{{oRelease.version}}/full.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>{% endif %}
           </ul>          
         {% elsif oRelease.directory_layout == "layout0" %}
           <h5>{{oRelease.version}}</h5>
@@ -38,7 +38,7 @@
       <h4>Strimzi Kafka Bridge</h4>
       {% for bRelease in site.data.releases.bridge %}
           <ul>
-            <li><a href="{{site.baseurl}}/docs/bridge/{{bRelease.version}}">{{bRelease.version}}</a> <a href="{{site.baseurl}}/docs/bridge/{{bRelease.version}}/full.html" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>
+            <li><a href="{{site.baseurl}}/docs/bridge/{{bRelease.version}}">{{bRelease.version}}</a> <a href="{{site.baseurl}}/docs/bridge/{{bRelease.version}}/full.html" title="Full documentation (New Window)" target="_blank"><i class="fas fa-external-link-alt"></i></a></li>
           </ul>
       {% endfor %}
     </div>
