Fix incorrect reference to Docker Hub
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/downloads/downloads-release-band.html
+++ b/_includes/downloads/downloads-release-band.html
@@ -100,6 +100,7 @@
     <div class="width-12-12">
       <p>Full list of changes can be found under the <a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/{{site.data.releases.operator[0].version}}">{{site.data.releases.operator[0].version}} release</a>.</p>
       <p><strong>Upgrading from Strimzi {{site.data.releases.operator[1].version}}? See the <a href="{{site.baseurl}}/documentation/">documentation</a> for upgrade instructions.</strong></p>
+      <p>The container images are available under the <a href="https://quay.io/organization/strimzi">Strimzi organization</a> in the Quay.io container registry.</p>
     </div>
   </div>
 </div>
