--- a/_includes/downloads/downloads-title-band.html
+++ b/_includes/downloads/downloads-title-band.html
@@ -3,7 +3,7 @@
     <div class="component-slim grid-wrapper">
       <div class="width-12-12">
         <h1>Downloads</h1>
-        <h3>Strimzi releases are available for download on our GitHub. The release artifacts contain documentation and example YAML files for deployment on Kubernetes. The Docker images are available on Docker Hub.</h3>
+        <h3>Strimzi releases are available for download on our GitHub. The release artifacts contain documentation and example YAML files for deployment on Kubernetes.</h3>
       </div>
     </div>
   </div>
